[gd_scene load_steps=2 format=3 uid="uid://be3btta2v07l"]

[ext_resource type="Script" uid="uid://d13g7iusquii2" path="res://scripts/save.gd" id="1_3sv4i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sv4i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmationLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="save" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Salvar"

[node name="load" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Carregar"

[node name="exit" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/save" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/load" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_confirmation_timer_timeout"]
